--- a/war/index.html
+++ b/war/index.html
@@ -20,7 +20,7 @@
         <td colspan="2" style="font-weight:bold;">Available Servlets:</td>        
       </tr>
       <tr>
-        <td><a href="mniterp">MnitERP</a></td>
+        <td><a href="wel.html">MnitERP</a></td>
       </tr>
     </table>
   </body>
